[gd_scene load_steps=2 format=3 uid="uid://c20jqw83sqjob"]

[ext_resource type="Script" path="res://scripts/VictoryScreen.gd" id="1_0x8qx"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x8qx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.3, 0.1, 1)

[node name="VictoryTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -100.0
text = "ðŸŽ‰ VICTORY! ðŸŽ‰"
horizontal_alignment = 1
vertical_alignment = 1
add_theme_font_size_override("font_size", 48)
add_theme_color_override("font_color", Color(1, 1, 0, 1))

[node name="VictoryMessage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = 50.0
text = "Congratulations! You've completed both levels!
You collected all the gems and defeated all the enemies!"
horizontal_alignment = 1
vertical_alignment = 1
add_theme_font_size_override("font_size", 24)
add_theme_color_override("font_color", Color(1, 1, 1, 1))

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 150.0
text = "PLAY AGAIN"
add_theme_font_size_override("font_size", 24)

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]

[node name="NewGameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 180.0
offset_right = 100.0
offset_bottom = 220.0
text = "NEW GAME"
add_theme_font_size_override("font_size", 20)

[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_button_pressed"] 